# IN4110-Problemlosning-med-hoyniva-sprak

./: .gitignore  README.md  array_class.py  requirements.txt  test_array.py
PeerReview/PR1/: PullRequestComments.txt
assignment1/: friendly_greeting.txt  gitconflict.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/: README.md  profile-report.md  pyproject.toml
assignment3/instapy/: cli.py  cython_filters.pyx  io.py  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py  wiki_race_challenge.py
obliger/: array_class.py.lnk  readme.md
other/: 3d_array_test.py  file_test.py  math_tools.py  numpy_test.py  test_file.py  test_math_tools.py
